// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the buttons in the playground 1`] = `
<Component
  style={
    Object {
      "height": 50,
      "justifyContent": "center",
    }
  }
>
  <IconLoading
    size="small"
  />
</Component>
`;

exports[`renders the buttons in the playground 2`] = `
<Component
  style={
    Object {
      "height": 50,
      "justifyContent": "center",
    }
  }
>
  <LinkButton
    onPress={[Function]}
    title={
      <Translation
        id="hotels_search.load_more"
      />
    }
  />
</Component>
`;
